<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignInActivity"
    android:background="@color/darkGrey">

    <EditText
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="28dp"
        android:ems="10"
        android:hint="@string/username"
        android:textColor="@color/white"
        android:textColorHint="@color/green"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/password"
        app:layout_constraintEnd_toEndOf="parent"
        android:autofillHints="" />

    <EditText
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="280dp"
        android:ems="10"
        android:hint="@string/password"
        android:textColor="@color/white"
        android:textColorHint="@color/green"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:autofillHints="" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="127dp"
        android:layout_height="124dp"
        android:layout_marginStart="142dp"
        android:layout_marginTop="133dp"
        android:layout_marginEnd="142dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_launcher_round"
        android:contentDescription="@string/application_logo" />

    <Button
        android:id="@+id/sign_up"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="80dp"
        android:layout_marginBottom="204dp"
        android:backgroundTint="@color/green"
        android:text="@string/sign_up"
        android:textColor="@color/black"
        app:cornerRadius="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/sign_in"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginEnd="96dp"
        android:layout_marginBottom="204dp"
        android:backgroundTint="@color/green"
        android:text="@string/sign_in"
        android:textColor="@color/black"
        app:cornerRadius="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>