<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/darkGrey"
    tools:context=".NotificationFragment">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="6dp"
        android:text="@string/please_enter_your_number_below_and_press_the_quot_request_notifications_quot_button_if_you_wish_to_opt_out_of_notifications_go_to_settings_weight_and_calorie_tracker_notifications_from_here_you_can_toggle_notifications_off"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/phone_input"
        android:layout_width="287dp"
        android:layout_height="75dp"
        android:layout_marginStart="62dp"
        android:layout_marginEnd="62dp"
        android:layout_marginBottom="16dp"
        android:ems="10"
        android:hint="@string/phone_number_1234567899"
        android:textColor="@color/white"
        android:textColorHint="@color/green"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/request_notifications"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        android:autofillHints=""
        tools:ignore="TextFields" />

    <Button
        android:id="@+id/request_notifications"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="160dp"
        android:layout_marginEnd="160dp"
        android:layout_marginBottom="340dp"
        android:backgroundTint="@color/green"
        android:text="@string/request_notifications"
        android:textColor="@color/black"
        app:cornerRadius="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>